# JellyRip

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CREDITS.md  FEATURE_MAP.md  JellyRip.py  JellyRip.spec  README.md  SECURITY.md  STATUS.md  TASKS.md  TESTERS.md  THIRD_PARTY_NOTICES.md  build.bat  build_installer.bat  config.py  main.py  pyinstaller_tk_runtime_hook.py  pyproject.toml  pyrightconfig.json  release.bat  release_notes.md  release_notes.txt  release_notes_ai.md  release_notes_ai.txt  requirements-dev.txt  requirements.txt  test_jellyrip.py
.claude/: settings.local.json
controller/: __init__.py  controller.py  legacy_compat.py  library_scan.py  naming.py  rip_validation.py  session.py  session_paths.py  session_recovery.py
core/: media_scan.py  pipeline.py
docs/: GIT_NAVIGATION.md  _config.yml  architecture.md  branch-workflow.md  code-signing-application-draft.md  code-signing-plan.md  copy-style.md  glossary.md  index.md  migration-roadmap.md  pyside6-migration-plan.md  release-process.md  repository-layout.md  smoke-report-2026-05-04.md  symbol-library.md  ux-copy-and-accessibility-plan.md  workflow-stabilization-criteria.md
engine/: __init__.py  episode_split.py  rip_ops.py  ripper_engine.py  scan_ops.py  thumbnails.py
gui/: __init__.py  ai_provider_dialog.py  main_window.py  secure_tk.py  session_setup_dialog.py  setup_wizard.py  theme.py  update_ui.py
gui_qt/: app.py  custom_themes.py  drive_handler.py  formatters.py  log_pane.py  main_window.py  preview_widget.py  qss_render.py  setup_wizard.py  splash.py  status_bar.py  theme.py  (+6 more)
(+232 files in other folders)
